11Jul02=======================================================================
1. NP work has now started in ernest ([ed]who he?). You will need to download
Digest::SHA1 and any dependant packages to run this release. HOWEVER tempted
you are, please don't set/newprotocol on any nodes. It won't work.
2. Make the cluster node registered on from startup (from Mark HB9DBM).
09Jul02=======================================================================
1. make the is_qra more accurate (from Mark HB9DBM).
04Jul02=======================================================================
1. added another fix to Prefix.pm so that it resolves Japan callsigns again
also you can 'set/debug prefix' to see what it is trying to do.
03Jul02=======================================================================
1. Added the DEMONSTRATE command which allows a sysop to demonstrate a 
command to a user (from a request by Charlie K1XX). 
2. added message e31 (xxxx is not a user)
02Jul02=======================================================================
1. Fixed the problem with badspotter or badnode being set to baddx if either
of the data files are missing. 
25Jun02=======================================================================
1. as predicted there was an error in the Prefix routine, I have improved it.
24Jun02=======================================================================
1. make set/badspotter non SSID sensitive. Set/badnode is left to be SSID
sensitive. 
2. added 3XA(=3X) and K1B(=KH1) also changed the logic of sh/prefix. This
may break things, please test it. 
19Jun02=======================================================================
1. make set/badspotter and set/badnode apply to announces and talks as well
as spots. 
12Jun02=======================================================================
1. fixed (un)set/wwv and (un)set/wcy so they don't issue spurious messages.
Thanks Rene (oz1lqh)